workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workload-a
  template:
    metadata:
      labels:
        app: workload-a
    spec:
      containers:
        - name: workload-a
          image: binarydad/dotnet-sample-workload:latest
          ports:
            - containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: workload-a
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: workload-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workload-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workload-b
  template:
    metadata:
      labels:
        app: workload-b
    spec:
      containers:
        - name: workload-b
          image: binarydad/dotnet-sample-workload:latest
          ports:
            - containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: workload-b
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: workload-b
