httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: canary-route
spec:
  # hostnames:
  #   - "*"
  parentRefs:
    - kind: Gateway
      name: gateway
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: workload-a
          port: 80
          weight: 80
        - name: workload-b
          port: 80
          weight: 20
