ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.networking.azure.io/alb-name: aksalb
    alb.networking.azure.io/alb-namespace: alb
spec:
  ingressClassName: azure-alb-external
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workload-a
            port:
              number: 80
